--- a/reestr/Components/Layout/MainLayout.razor
+++ b/reestr/Components/Layout/MainLayout.razor
@@ -1,23 +1,18 @@
-﻿@inherits LayoutComponentBase
+@inherits LayoutComponentBase
 
-<div class="page">
-    <div class="sidebar">
-        <NavMenu />
-    </div>
-
-    <main>
-        <div class="top-row px-4">
-            <a href="https://learn.microsoft.com/aspnet/core/" target="_blank">About</a>
-        </div>
-
-        <article class="content px-4">
-            @Body
-        </article>
-    </main>
-</div>
-
-<div id="blazor-error-ui">
-    An unhandled error has occurred.
-    <a href="" class="reload">Reload</a>
-    <a class="dismiss">🗙</a>
-</div>
+<MudThemeProvider>
+    <MudDialogProvider />
+    <MudSnackbarProvider>
+        <MudLayout>
+            <MudAppBar Color="Color.Primary">
+                <MudText Typo="Typo.h6">Reestr</MudText>
+            </MudAppBar>
+            <MudDrawer Open="true" Variant="DrawerVariant.Mini" Elevation="1">
+                <NavMenu />
+            </MudDrawer>
+            <MudMainContent Class="p-4">
+                @Body
+            </MudMainContent>
+        </MudLayout>
+    </MudSnackbarProvider>
+</MudThemeProvider>
