Fix layout to use MudThemeProvider without child content

--- a/reestr/Components/Layout/MainLayout.razor
+++ b/reestr/Components/Layout/MainLayout.razor
@@ -1,9 +1,9 @@
 @inherits LayoutComponentBase
 
-<MudThemeProvider>
-    <MudDialogProvider />
-    <MudSnackbarProvider>
-        <MudLayout>
+<MudThemeProvider />
+<MudDialogProvider />
+<MudSnackbarProvider>
+    <MudLayout>
             <MudAppBar Color="Color.Primary">
                 <MudText Typo="Typo.h6">Reestr</MudText>
             </MudAppBar>
@@ -13,6 +13,5 @@
             <MudMainContent Class="p-4">
                 @Body
             </MudMainContent>
-        </MudLayout>
-    </MudSnackbarProvider>
-</MudThemeProvider>
+    </MudLayout>
+</MudSnackbarProvider>
