--- a/reestr/Components/Pages/Search.razor
+++ b/reestr/Components/Pages/Search.razor
@@ -1,4 +1,5 @@
 @page "/search"
+@rendermode InteractiveServer
 @using reestr.Services
 @inject ExcelDataService ExcelService
 @inject IDialogService DialogService
