--- a/reestr/Components/Routes.razor
+++ b/reestr/Components/Routes.razor
@@ -1,3 +1,4 @@
+@rendermode InteractiveServer
 ﻿<Router AppAssembly="typeof(Program).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="routeData" DefaultLayout="typeof(Layout.MainLayout)" />
