fix root component error

--- a/reestr/Components/App.razor
+++ b/reestr/Components/App.razor
@@ -1,5 +1,5 @@
-@rendermode InteractiveServer
-﻿<!DOCTYPE html>
+@* Root component rendered statically *@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
